# scmon

./: .cvsignore  Makefile.am  autogen.sh  configure.ac  scmon.spec.in
init/: .cvsignore  Makefile.inc  scmon.sle
listener/: .cvsignore  Makefile.inc  scmon-client.c
monitor/: .cvsignore  Makefile.inc  com.novell.Pkcs11Monitor.conf  com.novell.Pkcs11Monitor.interface  com.novell.Pkcs11Monitor.service.in  scdbuspk11monitor.c  scdbuspk11monitor.h  scerror.c  scerror.h  scinotify.c  scinotify.h  sclog.c  sclog.h  scmon.c  scnss.c  scnss.h  scnssmonitor.c  scnssmonitor.h  scpk11monitor-forks.c  scpk11monitor-threads.c  scpk11monitor.h
